# models/order.js
@@ -26,6 +26,11 @@ const orderSchema = new mongoose.Schema(
             type: String,
             required: [true, "vendorName 為必填"]
         },
+        // 顯示課程名稱
+        courseName: {
+            type: String,
+            required: [true, "courseName 為必填"]
+        },
         // 顯示品項名稱
         courseItemName: {
             type: String,
@@ -62,20 +67,28 @@ const orderSchema = new mongoose.Schema(
         },
         paidStatus: {
             type: Number,
-            enum: [0, 1, 2, 3, 4, 5, 6], // 0:待付款, 1: 已付款, 2: 已確認收到款, 3:已完課, 4:訂單取消(已過期), 5:訂單取消(待退款), 6:已退款
+            enum: [0, 1, 2, 3, 4, 5, 6], // 0:待付款, 1: 已付款, 2: 已確認收到款, 3:已完課, 4:訂單取消(已過期), 5:訂單取消(不需退款), 6:訂單取消(待退款), 7:訂單取消(已退款)
             default: 0,
         },
-        // 使用者送出後 5 碼後的時間
+        // 使用者送出後 5 碼後的時間 (paidStatus 1: 已付款)
         paidTime: {
             type: Date,
         },
-        // 賣家取消訂單時間
+        // 賣家確認收款時間 (paidStatus 2: 已確認收到款)
+        confirmTime: {
+            type: Date,
+        },
+        // 取消訂單時間 (paidStatus 4:訂單取消(已過期), 5:訂單取消(不需退款), 6:訂單取消(待退款))
         cancelTime: {
             type: Date,
         },
-        // 買家取消訂單原因
+        // 買家取消訂單原因 
         cancelReason: {
             type: String,
+        },
+        // 賣家退款時間 (paidStatus 7:訂單取消(已退款))
+        refundTime: {
+            type: Date,
         },
         // 訂單編號
         lastFiveDigits: {
