# swagger_output.json
@@ -45,6 +45,18 @@
       "description": "課程 (平台管理員)"
     },
     {
+      "name": "Orders-front",
+      "description": "訂單 (前台)"
+    },
+    {
+      "name": "Orders-back",
+      "description": "訂單 (後台)"
+    },
+    {
+      "name": "Orders-manage",
+      "description": "訂單 (平台管理員)"
+    },
+    {
       "name": "HR",
       "description": "--- 分隔線 - 以下是參考的 ---"
     },
@@ -1884,6 +1896,275 @@
                     "required": {
                       "type": "boolean",
                       "example": true
+                    }
+                  }
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/orders/admin/payment/summary": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "token",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/orders/admin/payment": {
+      "get": {
+        "tags": [
+          "Orders-back"
+        ],
+        "description": "取得進帳詳情 (Back)",
+        "parameters": [
+          {
+            "name": "token",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "query",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "startDate": {
+                  "type": "object",
+                  "properties": {
+                    "type": {
+                      "type": "string",
+                      "example": "string"
+                    },
+                    "description": {
+                      "type": "string",
+                      "example": "查詢創建日期範圍 - 起始日"
+                    },
+                    "default": {
+                      "type": "string",
+                      "example": "2024-05-25"
+                    }
+                  }
+                },
+                "endDate": {
+                  "type": "object",
+                  "properties": {
+                    "type": {
+                      "type": "string",
+                      "example": "string"
+                    },
+                    "description": {
+                      "type": "string",
+                      "example": "查詢創建日期範圍 - 終止日"
+                    },
+                    "default": {
+                      "type": "string",
+                      "example": "2024-05-25"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/orders/admin": {
+      "get": {
+        "tags": [
+          "Orders-back"
+        ],
+        "description": "取得所有訂單 (query: 訂單狀態、日期區間、keyword (_id || member.name)) (Back)",
+        "parameters": [
+          {
+            "name": "token",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "query",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "startDate": {
+                  "type": "object",
+                  "properties": {
+                    "type": {
+                      "type": "string",
+                      "example": "string"
+                    },
+                    "description": {
+                      "type": "string",
+                      "example": "查詢創建日期範圍 - 起始日"
+                    }
+                  }
+                },
+                "endDate": {
+                  "type": "object",
+                  "properties": {
+                    "type": {
+                      "type": "string",
+                      "example": "string"
+                    },
+                    "description": {
+                      "type": "string",
+                      "example": "查詢創建日期範圍 - 終止日"
+                    }
+                  }
+                },
+                "createdAt": {
+                  "type": "object",
+                  "properties": {
+                    "type": {
+                      "type": "string",
+                      "example": "string"
+                    },
+                    "description": {
+                      "type": "string",
+                      "example": "排序條件：(創建日期新到舊(預設), 舊到新: CREATED_AT_ASC)"
+                    }
+                  }
+                },
+                "keyword": {
+                  "type": "object",
+                  "properties": {
+                    "type": {
+                      "type": "string",
+                      "example": "string"
+                    },
+                    "description": {
+                      "type": "string",
+                      "example": "關鍵字 (訂單編號 || 會員名稱)"
+                    }
+                  }
+                },
+                "paidStatus": {
+                  "type": "object",
+                  "properties": {
+                    "type": {
+                      "type": "string",
+                      "example": "string"
+                    },
+                    "description": {
+                      "type": "string",
+                      "example": "課程狀態：(0:待付款, 1: 已付款, 2: 已確認收到款, 3:已完課, 4:訂單取消(已過期), 5:訂單取消(待退款), 6:已退款)"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/orders/admin/{orderId}": {
+      "get": {
+        "tags": [
+          "Orders-back"
+        ],
+        "description": "取得單筆訂單資料 (Back)",
+        "parameters": [
+          {
+            "name": "orderId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "要取得的訂單 ID"
+          },
+          {
+            "name": "token",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      },
+      "patch": {
+        "tags": [
+          "Orders-back"
+        ],
+        "description": "修改訂單 (賣家確認收到款項) (Back)",
+        "parameters": [
+          {
+            "name": "orderId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "要修改的訂單 ID"
+          },
+          {
+            "name": "token",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "description": "各狀態碼說明：2 (已確認收款 + confirmTime)、5 (訂單取消(不需退款) + cancelTime)、6 (訂單取消(待退款) + cancelTime)、7 (訂單取消(已退款) + refundTime)",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "paidStatus": {
+                  "type": "object",
+                  "properties": {
+                    "type": {
+                      "type": "string",
+                      "example": "number"
+                    },
+                    "description": {
+                      "type": "string",
+                      "example": "課程狀態：(2: 已確認收到款, 5:訂單取消(不需退款), 6:訂單取消(待退款), 7:訂單取消(已退款)"
+                    },
+                    "required": {
+                      "type": "boolean",
+                      "example": true
+                    }
+                  }
+                },
+                "cancelReason": {
+                  "type": "object",
+                  "properties": {
+                    "type": {
+                      "type": "string",
+                      "example": "string"
+                    },
+                    "description": {
+                      "type": "string",
+                      "example": "5 || 6 要備註取消訂單原因"
                     }
                   }
                 }
